Bug 254674 - [GStreamer] Fix crash on devices where video sink is auto-plugged
Summary: [GStreamer] Fix crash on devices where video sink is auto-plugged
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Enrique Ocaña
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-29 10:25 PDT by Enrique Ocaña
Modified: 2023-06-12 05:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enrique Ocaña 2023-03-29 10:25:35 PDT
Some (downstream) platforms don't have any specific videosink enforced and use autoplugging instead. This means that createVideoSink() will return nullptr and the sink will be created automatically (autoplugged) when the time comes. However, the lambda[1] that sets max-lateness at createVideoSink() triggers an assert if the sink is null at that point.

[1] https://github.com/WebKit/WebKit/blob/main/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp#L3940
Comment 1 Enrique Ocaña 2023-03-29 10:49:27 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12123
Comment 2 Enrique Ocaña 2023-03-29 10:50:22 PDT
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1059
Comment 3 EWS 2023-06-12 05:56:27 PDT
Committed 265066@main (869bf0a64f0f): <https://commits.webkit.org/265066@main>

Reviewed commits have been landed. Closing PR #12123 and removing active labels.
Comment 4 Radar WebKit Bug Importer 2023-06-12 05:57:16 PDT
<rdar://problem/110639133>