[GStreamer] Fix crash on devices where video sink is auto-plugged https://bugs.webkit.org/show_bug.cgi?id=254674

Reviewed by Xabier Rodriguez-Calvar.

Some (downstream) platforms don't have any specific videosink enforced and use autoplugging instead.
This means that createVideoSink() will return nullptr and the sink will be created automatically
(autoplugged) when the time comes. However, the lambda[1] that sets max-lateness at createVideoSink()
triggers an assert if the sink is null at that point.

Original author: Eugene Mutavchi <Ievgen_Mutavchi@comcast.com>

See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1059

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createVideoSink): Removed assert and just return if m_videoSink is null.

Canonical link: https://commits.webkit.org/265066@main